--- a/blog/templates/blog/PostText_detail.html
+++ b/blog/templates/blog/PostText_detail.html
@@ -18,6 +18,12 @@
                             <small class="text-muted">Paste's duration is one year </small>
                         {% endif %}
                     </div>
+                    <div>
+                        {% if object.author == user %}
+                            <a class= "btn btn-success btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}"> Update </a>
+                            <a class= "btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}"> Delete </a>
+                        {% endif %}
+                    </div>
                 </div>
                 <h2 class="article-title">{{ object.title }}</h2>
                 <p class="article-content">{{ object.content }}</p>
