--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -52,7 +52,7 @@
           <div class="col-md-3 container">
             {% if user.is_authenticated %}
               <div class="list-group ">
-                <a class="btn btn-info list-group-item list-group-item-light" href="{% url 'post-create' %}" >Paste Post</a>
+                <a class="btn btn-info list-group-item list-group-item-light" href="{% url 'postfile-create' %}" >Paste Post</a>
                 <a class="btn btn-info list-group-item list-group-item-light" href="{% url 'blog-myHome' %}">My Pastes</a>
                 <a class="btn btn-info list-group-item list-group-item-light" href="#">My Friends</a>
               </div>
