--- a/blog/templates/blog/filehome.html
+++ b/blog/templates/blog/filehome.html
@@ -11,11 +11,11 @@
                         <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
                     </div>
                     <div>
-                        {% if post.expiration == 1 %}
+                        {% if post.expiration == '1' %}
                             <small class="text-muted">Paste's duration is one day </small>
-                        {% elif post.expiration == 7 %}
+                        {% elif post.expiration == '7' %}
                             <small class="text-muted ">Paste's duration is one week </small>
-                        {% elif post.expiration == 30 %}
+                        {% elif post.expiration == '30' %}
                             <small class="text-muted">Paste's duration is one month </small>
                         {% else %}
                             <small class="text-muted">Paste's duration is one year </small>
