share with me and my paste button now working correctly. Urlize is used to make url in text clickable

--- a/blog/templates/blog/PostFile_detail.html
+++ b/blog/templates/blog/PostFile_detail.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <h2 class="article-title">{{ object.title }}</h2>
-                <p class="article-content">{{ object.content }}</p>
+                <p class="article-content">{{ object.content | urlize }}</p>
 
                 {% if  object.attachment_set.all%}
                     <div class="list-group">
