--- a/blog/templates/blog/PostText_detail.html
+++ b/blog/templates/blog/PostText_detail.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <h2 class="article-title">{{ object.title }}</h2>
-                <p class="article-content">{{ object.content }}</p>
+                <p class="article-content">{{ object.content | urlize }}</p>
             </div>
         </article>
 {% endblock content %}
