--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-                <p class="article-content">{{ post.content }}</p>
+                <p class="article-content">{{ post.content |urlize }}</p>
             </div>
         </article>
     {% endfor %}
