--- a/blog/templates/blog/fileSharedWithMe.html
+++ b/blog/templates/blog/fileSharedWithMe.html
@@ -1,33 +1,32 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-
-    {% for post in posts%}
+    {% for share in shares%}
         <article class="media content-section">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ post.author }}</a>
+                    <a class="mr-2" href="#">{{ share.post.author }}</a>
                     <div>
-                        <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
+                        <small class="text-muted">{{ share.post.date_posted|date:"F d, Y" }}</small>
                     </div>
                     <div>
-                        {% if post.expiration == '1' %}
+                        {% if share.post.expiration == '1' %}
                             <small class="text-muted">Paste's duration is one day </small>
-                        {% elif  post.expiration == '7' %}
+                        {% elif  share.post.expiration == '7' %}
                             <small class="text-muted ">Paste's duration is one week </small>
-                        {% elif  post.expiration == '30' %}
+                        {% elif  share.post.expiration == '30' %}
                             <small class="text-muted">Paste's duration is one month </small>
                         {% else %}
                             <small class="text-muted">Paste's duration is one year </small>
                         {% endif %}
                     </div>
                 </div>
-                <h2><a class="article-title" href="{% url 'postfile-detail' post.id %}">{{ post.title }}</a></h2>
-                <p class="article-content">{{ post.snippet |urlize }}</p>
-                {% if  post.attachment_set.all%}
+                <h2><a class="article-title" href="{% url 'postfile-detail' share.post.id %}">{{ share.post.title }}</a></h2>
+                <p class="article-content">{{ share.post.snippet|urlize }}</p>
+                {% if  share.post.attachment_set.all%}
                     <h6>Files :</h6>
                     <div class="list-group">
-                        {% for file in post.attachment_set.all%}
+                        {% for file in share.post.attachment_set.all%}
                             <a class="btn list-group-item list-group-item-light text-left" href="{{ file.file.url }}" target="_blank">{{ forloop.counter }}.   {{file.filename }}</a>
                         {% endfor %}
                         </div>
