--- a/blog/templates/blog/PostFile_share.html
+++ b/blog/templates/blog/PostFile_share.html
@@ -15,7 +15,7 @@
                 {% endfor %}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Share</button>
+                <button class="btn btn-outline-info" type="submit">Apply</button>
             </div>
         </form>
     </div>
